--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,5 +10,9 @@
   ],
   "include": [
     "src/**/*.d.ts"
-  ]
+  ],
+  "paths": {
+    "@api/*": ["src/api/*"],
+    "@model/*": ["src/model/*"]
+  }
 }
