feature: 图片随机排布

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     ],
     "paths": {
       "@api/*": ["src/app/api/*"],
-      "@model/*": ["src/app/model/*"]
+      "@model/*": ["src/app/model/*"],
+      "@utils/*": ["src/app/utils/*"]
     }
   },
   "angularCompilerOptions": {
