--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,6 +13,7 @@
   ],
   "paths": {
     "@api/*": ["src/api/*"],
-    "@model/*": ["src/model/*"]
+    "@model/*": ["src/model/*"],
+    "@utils/*": ["src/utils/*"]
   }
 }
